--- a/templates/layouts/navbar.gohtml
+++ b/templates/layouts/navbar.gohtml
@@ -17,12 +17,13 @@
         <a class="navbar-item" href="/">Home</a>
         <a class="navbar-item" href="/books">Books</a>
         <a class="navbar-item" href="/authors">Authors</a>
+        <a class="navbar-item" href="/about">About</a>
       </div>
 
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-primary">
+            <a class="button is-primary" href="">
               <strong>Sign up</strong>
             </a>
             <a class="button is-light">
