--- a/templates/layouts/footer.gohtml
+++ b/templates/layouts/footer.gohtml
@@ -1,10 +1,13 @@
 {{define "footer"}}
-  <footer class="footer navbar is-fixed-bottom">
-    <div class="content has-text-centered">
-      <p>
-        <strong>Footer</strong> by <a href="https://jgthms.com">me</a>. The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
-      </p>
+  <footer class="footer mt-auto py-3 bg-light">
+    <div class="container">
+      <span class="text-muted"><strong>Footer</strong> by <a href="https://jgthms.com">me</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.</span>
     </div>
   </footer>
+{{/*  <footer class="footer mt-auto py-3 bg-light">*/}}
+{{/*    <div class="container">*/}}
+{{/*      <span class="text-muted">Place sticky footer content here.</span>*/}}
+{{/*    </div>*/}}
+{{/*  </footer>*/}}
 {{end}}
