added some layout and markup fixes, got rid of bulma, added signedIn template tag, started working on collections

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,8 @@
 .container {
-    width: auto;
-    max-width: 680px;
     padding: 0 15px;
+}
+
+h1 {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
