--- a/templates/authors.gohtml
+++ b/templates/authors.gohtml
@@ -1,6 +1,6 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.AuthorsViewModel*/ -}}
 {{ define "yield"}}
-  <h1>authors</h1>
+  <h1>Authors</h1>
   <table class="table">
     <thead>
     <tr>
