--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -1,3 +1,9 @@
 {{ define "yield"}}
-  <h1>index</h1>
+  <h1>Index</h1>
+
+  <form>
+    <div class="form-group">
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="type in book title or author">
+    </div>
+  </form>
 {{end}}
