--- a/templates/collections.gohtml
+++ b/templates/collections.gohtml
@@ -13,7 +13,8 @@
               <th>Name</th>
               <th>Description</th>
               <th>Edition</th>
-              <th>Added to Library</th>
+              <th>Read</th>
+              <th>Rating</th>
             </tr>
             </thead>
             <tbody>
@@ -23,7 +24,8 @@
                 <td>{{.Name}}</td>
                 <td>{{.Description}}</td>
                 <td>{{.Edition}}</td>
-                <td>{{.CreatedAt}}</td>
+                <td>{{.Read}}</td>
+                <td>{{.Rating}}</td>
               </tr>
             {{end}}
             </tbody>
