--- a/templates/author_details.gohtml
+++ b/templates/author_details.gohtml
@@ -1,7 +1,7 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.AuthorDetailsViewModel*/ -}}
 {{ define "yield"}}
   <h1 class="title">Author - {{ .Author.Name }}</h1>
-  <p>Written: <strong>{{ .Author.BookCount }}</strong> books</p>
+  <p>Written: <strong>{{ .BookCount }}</strong> books</p>
   <div>
     <table class="table">
       <thead>
