Single input with commas for the win

--- a/templates/book_add.gohtml
+++ b/templates/book_add.gohtml
@@ -19,9 +19,10 @@
       </div>
 
       <div class="mb-3">
-        <label class="form-label">Author</label>
+        <label class="form-label">Authors</label>
         <div class="control">
-          <input name="author" class="form-control" type="text">
+          <input name="authors" class="form-control" type="text"
+                 placeholder="separate by comma to add multiple">
         </div>
       </div>
 
