--- a/templates/book_edit.gohtml
+++ b/templates/book_edit.gohtml
@@ -46,7 +46,7 @@
       </label>
     </div>
 
-    <button type="submit" class="btn btn-primary">Edit</button>
+    <button type="submit" class="btn btn-outline-primary">Edit</button>
   </form>
 {{end}}
 
