--- a/templates/books.gohtml
+++ b/templates/books.gohtml
@@ -1,7 +1,7 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.BooksViewModel*/ -}}
 {{ define "yield"}}
   <h1 class="title">Books</h1>
-    <a href="/books/add"><button class="btn btn-outline-primary">Add</button></a>
+    <a href="/books/add"><button class="btn btn-outline-success">Add</button></a>
   <table class="table">
     <thead>
     <tr>
