--- a/templates/books.gohtml
+++ b/templates/books.gohtml
@@ -2,7 +2,7 @@
 {{ define "yield"}}
   <h1 class="title">Books</h1>
     <a href="/books/add"><button class="btn btn-outline-success">Add</button></a>
-  <table class="table">
+  <table class="table table-striped">
     <thead>
     <tr>
       <th>ID</th>
