--- a/templates/authors.gohtml
+++ b/templates/authors.gohtml
@@ -1,7 +1,7 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.AuthorListViewModel*/ -}}
 {{ define "yield"}}
   <h1>Authors</h1>
-  <table class="table">
+  <table class="table table-striped">
     <thead>
     <tr>
       <th>ID</th>
