--- a/templates/collections.gohtml
+++ b/templates/collections.gohtml
@@ -4,42 +4,47 @@
   <div>
     <div class="md-3">
       <p>
-        <a href="/books/add"><button class="btn btn-outline-success">Add</button></a>
+        <a href="/collections/book/add">
+          <button class="btn btn-outline-success">Add</button>
+        </a>
       </p>
     </div>
     <div>
-      {{ range .Collections }}
-        <div class="md-3">
-          <div class="clearfix bg-light">
-              <span>{{.Name}}</span>
-            <button class="btn btn-outline-primary float-end" type="submit">Edit</button>
-          </div>
-          <table class="table">
-            <thead>
-            <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Description</th>
-              <th>Edition</th>
-              <th>Read</th>
-              <th>Rating</th>
-            </tr>
-            </thead>
-            <tbody>
-            {{range .Books}}
+        {{ range .Collections }}
+          <div class="md-3">
+            <h3>{{.Name}}</h3>
+            <div>
+              <form method="post" action="/collections/{{.ID}}/delete">
+                <a class="btn btn-sm btn-outline-primary" role="button" href="/collections/{{.ID}}">Edit</a>
+                <button class="btn btn-sm btn-outline-danger">Delete</button>
+              </form>
+            </div>
+            <table class="table table-striped">
+              <thead>
               <tr>
-                <td><a class="is-link" href="/books/{{.ID}}">{{.ID}}</a></td>
-                <td>{{.Name}}</td>
-                <td>{{.Description}}</td>
-                <td>{{.Edition}}</td>
-                <td>{{.Read}}</td>
-                <td>{{if eq .Rating -1}}-{{else}}{{.Rating}}{{end}}</td>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Edition</th>
+                <th>Read</th>
+                <th>Rating</th>
               </tr>
-            {{end}}
-            </tbody>
-          </table>
-        </div>
-      {{end}}
+              </thead>
+              <tbody>
+              {{range .Books}}
+                <tr>
+                  <td><a class="is-link" href="/books/{{.ID}}">{{.ID}}</a></td>
+                  <td>{{.Name}}</td>
+                  <td>{{.Description}}</td>
+                  <td>{{.Edition}}</td>
+                  <td>{{.Read}}</td>
+                  <td>{{if eq .Rating -1}}-{{else}}{{.Rating}}{{end}}</td>
+                </tr>
+              {{end}}
+              </tbody>
+            </table>
+          </div>
+        {{end}}
     </div>
 
   </div>
