--- a/templates/collections.gohtml
+++ b/templates/collections.gohtml
@@ -4,7 +4,7 @@
   <div>
     <div class="md-3">
       <p>
-        <a href="/collections/book/add">
+        <a href="/collections/add">
           <button class="btn btn-outline-success">Add</button>
         </a>
       </p>
