bootstrap is terrible, have to go back to buefy?

--- a/templates/book_edit.gohtml
+++ b/templates/book_edit.gohtml
@@ -30,12 +30,12 @@
     <div class="mb-3">
       <label class="form-label">Rating</label>
       <select name="rating" class="form-select" aria-label=".form-select-lg example">
-        {{$rating := .Rating}}
+          {{$rating := .Rating}}
         <option {{ if eq $rating -1 }}selected{{end}} value="-1">Select rating</option>
 
-        {{ range .Ratings}}
-          <option {{ if eq $rating . }}selected{{end}} value="{{.}}">{{.}}</option>
-        {{ end }}
+          {{ range .Ratings}}
+            <option {{ if eq $rating . }}selected{{end}} value="{{.}}">{{.}}</option>
+          {{ end }}
       </select>
     </div>
 
@@ -46,8 +46,21 @@
       </label>
     </div>
 
+    <div id="app">
+
+    </div>
+
     <button type="submit" class="btn btn-outline-primary">Edit</button>
     <button type="submit" formaction="/books/{{.ID}}/delete" class="btn btn-outline-danger">Delete</button>
   </form>
+
+  <script src="https://unpkg.com/vue"></script>
+  <script src="https://unpkg.com/buefy/dist/buefy.min.js"></script>
+
+  <script>
+      new Vue({
+          el: '#app'
+      })
+  </script>
 {{end}}
 
