Added author edit

--- a/templates/authors.gohtml
+++ b/templates/authors.gohtml
@@ -1,7 +1,7 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.AuthorListViewModel*/ -}}
 {{ define "yield"}}
-  <h1>Authors</h1>
-  <table class="table table-striped">
+  <h1 class="title">Authors</h1>
+  <table class="table is-striped">
     <thead>
     <tr>
       <th>ID</th>
