--- a/templates/books.gohtml
+++ b/templates/books.gohtml
@@ -1,8 +1,8 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.BooksViewModel*/ -}}
 {{ define "yield"}}
   <h1 class="title">Books</h1>
-    <a href="/books/add"><button class="btn btn-outline-success">Add</button></a>
-  <table class="table table-striped">
+    <a href="/books/add"><button class="button is-success is-outlined">Add</button></a>
+  <table class="table is-striped">
     <thead>
     <tr>
       <th>ID</th>
