--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -1,9 +1,9 @@
 {{ define "yield"}}
-  <h1>Index</h1>
+  <h1 class="title">Index</h1>
 
   <form>
     <div class="form-group">
-      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="type in book title or author">
+      <input type="email" class="input" id="exampleFormControlInput1" placeholder="type in book title or author">
     </div>
   </form>
 {{end}}
