--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,9 @@
-.container {
-    padding: 0 15px;
+#wrapper {
+    flex: 1;
 }
 
-h1 {
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-
-section {
-    padding-bottom: 40px;
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
