--- a/templates/author_edit.gohtml
+++ b/templates/author_edit.gohtml
@@ -1,22 +1,22 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.AuthorDetailsViewModel*/ -}}
 {{ define "yield"}}
   <h1 class="title">Author "{{ .Author.Name }}"</h1>
-  <div class="mb-3">
     <form method="post">
         {{ csrfField }}
 
-      <div class="mb-3">
-        <label class="form-label" for="name">Name</label>
+      <div class="field">
+        <label class="label" for="name">Name</label>
         <div class="control">
-          <input name="name" class="form-control" type="text" value="{{ .Author.Name}}">
+          <input name="name" class="input" type="text" value="{{ .Author.Name}}">
         </div>
       </div>
 
-      <button type="submit" class="btn btn-outline-primary" formaction="/authors/{{.Author.ID}}/edit">Edit</button>
-      <button type="submit" class="btn btn-outline-danger" formaction="/authors/{{.Author.ID}}/delete">Delete</button>
+      <button type="submit" class="button is-primary is-outlined">Edit
+      </button>
+      <button type="submit" class="button is-danger is-outlined" formaction="/authors/{{.Author.ID}}/delete">Delete
+      </button>
     </form>
-  </div>
-  <div class="mb-3">
+    <br />
     <table class="table">
       <thead>
       <tr>
@@ -39,7 +39,6 @@
       {{end}}
       </tbody>
     </table>
-  </div>
 
 {{end}}
 
