--- a/templates/book_edit.gohtml
+++ b/templates/book_edit.gohtml
@@ -1,57 +1,62 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.EditBookFormData*/ -}}
 {{ define "yield"}}
-  <h1>Book "{{ .Name }}"</h1>
+  <h1 class="title">Book "{{ .Name }}"</h1>
   <form method="post">
       {{ csrfField }}
 
     <input name="id" class="hidden" hidden type="text" value="{{.ID}}">
 
-    <div class="mb-3">
-      <label class="form-label">Name</label>
+    <div class="field">
+      <label class="label">Name</label>
       <div class="control">
-        <input name="name" class="form-control" type="text" value="{{ .Name}}">
+        <input name="name" class="input" type="text" value="{{ .Name}}">
       </div>
     </div>
 
-    <div class="mb-3">
-      <label class="form-label">Description</label>
+    <div class="field">
+      <label class="label">Description</label>
       <div class="control">
-        <input name="description" class="form-control" type="text" value="{{.Description}}">
+        <input name="description" class="input" type="text" value="{{.Description}}">
       </div>
     </div>
 
-    <div class="mb-3">
-      <label class="form-label">Authors</label>
+    <div class="field">
+      <label class="label">Authors</label>
       <div class="control">
-        <input name="authors" class="form-control" type="text" value="{{.Authors}}">
+        <input name="authors" class="input" type="text" value="{{.Authors}}">
       </div>
     </div>
 
-    <div class="mb-3">
-      <label class="form-label">Rating</label>
-      <select name="rating" class="form-select" aria-label=".form-select-lg example">
-          {{$rating := .Rating}}
-        <option {{ if eq $rating -1 }}selected{{end}} value="-1">Select rating</option>
+    <div class="field">
+      <label class="label" for="dupa">Rating</label>
+      <div class="control select">
+        <select name="rating" id="dupa">
+            {{$rating := .Rating}}
+          <option {{ if eq $rating -1 }}selected{{end}} value="-1">Select rating</option>
 
-          {{ range .Ratings}}
-            <option {{ if eq $rating . }}selected{{end}} value="{{.}}">{{.}}</option>
-          {{ end }}
-      </select>
+            {{ range .Ratings}}
+              <option {{ if eq $rating . }}selected{{end}} value="{{.}}">{{.}}</option>
+            {{ end }}
+        </select>
+      </div>
     </div>
 
-    <div class="mb-3 form-check">
-      <input class="form-check-input" name="read" type="checkbox" id="flexCheckChecked" {{ if .Read }}checked{{end}}>
-      <label class="form-check-label" for="flexCheckChecked">
-        Read
-      </label>
+
+    <div class="field">
+      <div class="control">
+        <label class="checkbox">
+          <input name="read" type="checkbox" {{ if .Read }}checked{{end}}>
+          Read
+        </label>
+      </div>
     </div>
 
     <div id="app">
 
     </div>
 
-    <button type="submit" class="btn btn-outline-primary">Edit</button>
-    <button type="submit" formaction="/books/{{.ID}}/delete" class="btn btn-outline-danger">Delete</button>
+    <button type="submit" class="button is-primary is-outlined">Edit</button>
+    <button type="submit" formaction="/books/{{.ID}}/delete" class="button is-danger is-outlined">Delete</button>
   </form>
 
   <script src="https://unpkg.com/vue"></script>
