--- a/templates/collection_edit.gohtml
+++ b/templates/collection_edit.gohtml
@@ -1,33 +1,35 @@
 {{define "yield"}}
-  <h1>Collection "{{.Name}}"</h1>
-  <section>
-    <form method="post">
-        {{ csrfField }}
-      <input name="id" class="hidden" hidden type="text" value="{{.ID}}">
+  <h1 class="title">Collection "{{.Name}}"</h1>
+  <form method="post">
+      {{ csrfField }}
+    <input name="id" class="hidden" hidden type="text" value="{{.ID}}">
 
-      <div class="mb-3">
-        <label class="form-label">Name</label>
+    <div class="field">
+      <label class="label">Name</label>
+      <div class="control">
+        <input name="name" class="input" type="text" value="{{ .Name}}">
+      </div>
+    </div>
+
+    <button type="submit" class="button is-primary is-outlined">Edit</button>
+  </form>
+    <br />
+
+  <h3 class="subtitle">Books in this collection</h3>
+    <form method="post" action="/collections/{{.ID}}/book/add">
+      <div class="field">
         <div class="control">
-          <input name="name" class="form-control" type="text" value="{{ .Name}}">
+          <input class="input" name="name" list="datalistOptions" placeholder="Type to search...">
+          <datalist id="datalistOptions">
+              {{ range .Books }}
+                <option value="{{.Name}}"></option>
+              {{end}}
+          </datalist>
         </div>
       </div>
-
-      <button type="submit" class="btn btn-outline-primary">Edit</button>
+      <button class="button is-primary is-outlined" type="submit">Add</button>
     </form>
-  </section>
-  <section>
-    <h3>Books in this collection</h3>
-    <form method="post" action="/collections/{{.ID}}/book/add">
-      <div class="input-group mb-3">
-      <button class="btn btn-outline-secondary" type="submit">Add</button>
-      <input class="form-control" name="name" list="datalistOptions" placeholder="Type to search...">
-      <datalist id="datalistOptions">
-        {{ range .Books }}
-          <option value="{{.Name}}"></option>
-        {{end}}
-      </datalist>
-      </div>
-    </form>
+    <br />
     <table class="table">
       <thead>
       <tr>
@@ -52,7 +54,7 @@
             <td>{{if eq .Rating -1}}-{{else}}{{.Rating}}{{end}}</td>
             <td>
               <form method="post" action="/collections/{{ $colID }}/book/{{.ID}}/delete">
-                <button class="btn btn-sm btn-outline-danger" type="submit">Delete</button>
+                <button class="button is-danger is-outlined is-small" type="submit">Delete</button>
               </form>
             </td>
           </tr>
