--- a/templates/collections.gohtml
+++ b/templates/collections.gohtml
@@ -1,51 +1,43 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.CollectionsListViewModel*/ -}}
 {{define "yield"}}
-  <h1>Collections</h1>
-  <div>
-    <div class="md-3">
-      <p>
-        <a href="/collections/add">
-          <button class="btn btn-outline-success">Add</button>
-        </a>
-      </p>
-    </div>
-    <div>
-        {{ range .Collections }}
-          <div class="md-3">
-            <h3>{{.Name}}</h3>
-            <div>
-              <form method="post" action="/collections/{{.ID}}/delete">
-                <a class="btn btn-sm btn-outline-primary" role="button" href="/collections/{{.ID}}">Edit</a>
-                <button class="btn btn-sm btn-outline-danger">Delete</button>
-              </form>
-            </div>
-            <table class="table table-striped">
-              <thead>
-              <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Edition</th>
-                <th>Read</th>
-                <th>Rating</th>
-              </tr>
-              </thead>
-              <tbody>
-              {{range .Books}}
-                <tr>
-                  <td><a class="is-link" href="/books/{{.ID}}">{{.ID}}</a></td>
-                  <td>{{.Name}}</td>
-                  <td>{{.Description}}</td>
-                  <td>{{.Edition}}</td>
-                  <td>{{.Read}}</td>
-                  <td>{{if eq .Rating -1}}-{{else}}{{.Rating}}{{end}}</td>
-                </tr>
-              {{end}}
-              </tbody>
-            </table>
-          </div>
+  <h1 class="title">Collections</h1>
+  <p>
+    <a href="/collections/add">
+      <button class=" button is-success is-outlined">Add</button>
+    </a>
+  </p>
+  <br />
+  {{ range .Collections }}
+      <h3 class="subtitle">{{.Name}}</h3>
+      <div>
+        <form method="post" action="/collections/{{.ID}}/delete">
+          <a class="button button is-primary is-outlined is-small" role="button" href="/collections/{{.ID}}">Edit</a>
+          <button class="button is-danger is-outlined is-small">Delete</button>
+        </form>
+      </div>
+      <table class="table is-striped">
+        <thead>
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Edition</th>
+          <th>Read</th>
+          <th>Rating</th>
+        </tr>
+        </thead>
+        <tbody>
+        {{range .Books}}
+          <tr>
+            <td><a class="is-link" href="/books/{{.ID}}">{{.ID}}</a></td>
+            <td>{{.Name}}</td>
+            <td>{{.Description}}</td>
+            <td>{{.Edition}}</td>
+            <td>{{.Read}}</td>
+            <td>{{if eq .Rating -1}}-{{else}}{{.Rating}}{{end}}</td>
+          </tr>
         {{end}}
-    </div>
-
-  </div>
+        </tbody>
+      </table>
+  {{end}}
 {{end}}
