--- a/templates/layouts/bulma.gohtml
+++ b/templates/layouts/bulma.gohtml
@@ -1,35 +1,28 @@
-{{define "bootstrap"}}
+{{define "bulma"}}
   <!DOCTYPE html>
-  <html lang="en" class="h-100">
+  <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-signin-client_id"
           content="810036611838-k3ur24fbnamqvlu4stsorm47v2onlv0k.apps.googleusercontent.com">
     <title>Bookler</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
-
   </head>
-  <body class="d-flex flex-column h-100">
-  {{template "navbar" .}}
-  <main class="flex-shrink-0">
-
-    <div class="container">
+  <body>
+  <div id="wrapper">
+      <div class="container">
+      {{template "navbar" .}}
       {{ template "yield" .Stuff}}
-    </div>
-  </main>
+      </div>
+  </div>
   {{ template "footer"}}
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" async defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-          crossorigin="anonymous"></script>
-
   </body>
   </html>
 {{ end }}
